# Marquee-Flight-Tracker

./: README.md  config.example.yaml  pyproject.toml  run_web.sh  serve.py
.claude/: launch.json
scripts/: marquee-board.service  start-marquee.sh
src/marquee_board/: __main__.py  app.py  config.py  fetcher.py  formatter.py
src/marquee_board/display/: base.py  led.py  terminal.py  web.py
src/marquee_board/enrichment/: enricher.py  route_resolver.py
src/marquee_board/providers/: base.py  calendar.py  flights.py  weather.py
src/marquee_board/renderer/: __init__.py  colors.py  engine.py  fonts.py  icons.py  painter.py
src/marquee_flight_tracker/: app.py  config.py  fetcher.py
src/marquee_flight_tracker/enrichment/: enricher.py  route_resolver.py
static/: marquee.css  marquee.html  marquee.js  settings.css  settings.html  settings.js  simulator.css  simulator.html  simulator.js
